fix the behavior of the copy buttons

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 /* Основные настройки окна */
 body {
-    width: 350px;
+    width: 320px;
     padding: 0;
 
     font-family: system-ui;
@@ -28,14 +28,14 @@ body {
 /* Полужирные заголовки в меню */
 .title {
     font-weight: 700;
-    font-size: 1.2em;
+    font-size: 1.5em;
 }
 
 /* Иконка в кнопке */
 .button svg {
-    height: 1em;
-    width: 1em;
-    margin-bottom: -0.12em;
+    height: 1.1em;
+    width: 1.1em;
+    /*margin-bottom: -0.12em;*/
     fill: rgb(0, 0, 0);
 }
 
@@ -44,22 +44,23 @@ body {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    align-items: center;
     padding: 0.25em 0 0.25em 0;
 }
 
 /* Заголовок записи */
 .record .title {
-    padding-left: 0.25em;
+    padding: 0 0.25em 0 0.25em;
     flex-grow: 2;
     text-align: left;
     display: table;
     width: 100%;
-    padding-right: 0.5em;
 }
 
 /* Обрезание текста заголовка в троеточие */
-.record .title span {
+.record span {
     display: table-cell;
+    font-size: 0.7em;
     max-width: 1px;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -77,11 +78,12 @@ body {
 }
 
 .record-counter svg {
-    /*display: none;*/
+    display: none;
 }
 
 .record-counter:hover svg {
     display: inline;
+    margin-right: 0.25em;
 }
 
 /* Настройки заглушки когда нет записей */
@@ -99,6 +101,7 @@ body {
 
 .action:hover svg {
     fill: rgb(0, 122, 255);
+
 }
 
 .danger:hover {
@@ -141,7 +144,13 @@ body {
     /*justify-content: space-evenly;*/
 }
 
-/* Иконки чекбоксов и радио кнопок */
+hr {
+    opacity: 0.6;
+    width: 100%;
+    margin: 0.6em 0;
+}
+
+/* Иконки чекбоксов и радио кнопок*/
 /*input:where([type="checkbox"], [type="radio"]) {*/
 /*    display: none;*/
 /*}*/
@@ -201,6 +210,8 @@ body {
     hr {
         opacity: 0.6;
         border-top: 1px solid #fff;
+        width: 350px;
+        margin: 0.8em 0;
     }
 }
 
