--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 1.0rem;
+    padding: 0.8rem;
     text-align: center;
 }
 
@@ -13,6 +13,7 @@ p,
 ul,
 ol,
 li,
+hr,
 blockquote,
 fieldset {
     margin: 0;
