--- a/src/shared/ui/button/button.module.css
+++ b/src/shared/ui/button/button.module.css
@@ -1,65 +1,27 @@
 /* Кнопка */
 .button {
     border: none;
-    font-size: 1.3em;
+    font-size: 1.0rem;
     background-color: transparent;
 }
 
 
 .button:hover,
 .button:hover svg {
-    color: rgb(0, 122, 255);
-    fill: rgb(0, 122, 255);
+    color: var(--blue);
+    fill: var(--blue);
     cursor: pointer;
 }
 
 .button:active,
 .button:active svg {
-    color: black;
-    fill: black;
+    color: var(--black);
+    fill: var(--black);
 }
 
 .button:disabled,
 .button:disabled svg {
-    fill: lightgrey;
+    fill: var(--lightgrey);
     pointer-events: none;
 }
 
-.buttonIconWrapper {
-    display: flex;
-    gap: 0.25em;
-    align-items: center;
-}
-
-.danger:hover {
-    color: rgb(255, 59, 48);
-}
-
-.danger:focus {
-    color: rgb(0, 0, 0);
-}
-
-.danger:hover svg {
-    fill: rgb(255, 59, 48);
-}
-
-/* Кнопка клонирования при наведении на счетчик страницы */
-.buttonCounter {
-    flex-shrink: 0;
-    font-weight: inherit;
-}
-
-.buttonCounter svg {
-    display: none;
-}
-
-.buttonCounter:hover svg {
-    display: inline;
-}
-
-.buttonSvg {
-    display: block;
-    height: 1.1em;
-    width: 1.1em;
-    fill: rgb(0, 0, 0);
-}
