--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,30 @@
     padding: 0.8rem;
     text-align: center;
 
-    --white: #FAFAFA;
-    --black: #000;
-    --green: #8FBC8F;
-    --red: #FF453A;
-    --blue: #007AFF;
-    --lightgrey: #D3D3D3;
+    --background-color: #FAFAFA;
+    --text-color: #000;
+    --danger-color: #FF453A;
+    --button-text-color: #007AFF;
+    --button-color: #D3D3D3;
+    --darkGray: #171D27;
+    --separator-color: #D3D3D3;
 }
 
 html {
     font-size: 14px;
+}
+
+/* Основные настройки окна */
+body {
+    width: 22rem;
+    padding: 0;
+    margin: 0;
+    font-family: "Roboto Light", system-ui;
+    text-align: center;
+    user-select: none;
+    color: #000;
+    background-color: #FAFAFA;
+    -webkit-user-select: none;
 }
 
 h1,
@@ -29,19 +43,8 @@ blockquote,
 fieldset {
     margin: 0;
     padding: 0;
+    color: inherit;
 }
-
-/* Основные настройки окна */
-body {
-    width: 22rem;
-    padding: 0;
-    margin: 0;
-    font-family: "Roboto Light", system-ui;
-    text-align: center;
-    user-select: none;
-    -webkit-user-select: none;
-}
-
 
 /* Полужирные заголовки в меню */
 .menu .title {
@@ -52,8 +55,21 @@ body {
 /* Иконки чекбоксов и радио кнопок*/
 input[type="checkbox"],
 input[type="radio"] {
+    -webkit-appearance: none; /* Для WebKit-браузеров (Chrome, Safari) */
+    -moz-appearance: none; /* Для Firefox */
+    appearance: none; /* Стандартный способ */
+    border: 1px solid var(--button-text-color);
     height: 0.9rem;
     width: 0.9rem;
+}
+input[type="radio"] {
+    border-radius: 0.5rem;
+}
+
+input[type="checkbox"]:checked,
+input[type="radio"]:checked {
+    background-color: var(--button-text-color);
+    border-color: var(--button-text-color);
 }
 
 input, label {
@@ -67,76 +83,19 @@ input, label {
 /* Цвета в темной теме */
 @media (prefers-color-scheme: dark) {
 
+    #root {
+        --background-color: #2B2B2B;
+        --text-color: #FAFAFA;
+        --danger-color: #FF453A;
+        --button-text-color: #80b568;
+        --button-color: #424242;
+        --darkGray: #D3D3D3;
+        --separator-color: #6D6D6D;
+    }
+
     body {
-        background-color: var(--green);
-    }
-
-    .button svg {
-        fill: var(--white);
-        cursor: pointer;
-    }
-
-    label svg {
-        fill: var(--white);
-    }
-
-    /*.action:hover {*/
-    /*    color: rgb(10, 132, 255);*/
-    /*}*/
-    /*.action:hover svg {*/
-    /*    fill: rgb(10, 132, 255);*/
-    /*}*/
-    .iconDanger:hover {
-        color: var(--red);
-    }
-
-    .iconDanger:hover svg {
-        fill: var(--red);
-    }
-
-    hr {
-        opacity: 0.6;
-        border-top: 1px solid var(--white);
-        width: 350px;
-        margin: 0.8rem 0;
+        background-color: #2B2B2B;
+        color: #FAFAFA;
     }
 }
 
-
-/*.logo {*/
-/*    height: 6em;*/
-/*    padding: 1.5em;*/
-/*    will-change: filter;*/
-/*    transition: filter 300ms;*/
-/*}*/
-
-/*.logo:hover {*/
-/*    filter: drop-shadow(0 0 2em #646cffaa);*/
-/*}*/
-
-/*.logo.react:hover {*/
-/*    filter: drop-shadow(0 0 2em #61dafbaa);*/
-/*}*/
-
-/*@keyframes logo-spin {*/
-/*    from {*/
-/*        transform: rotate(0deg);*/
-/*    }*/
-/*    to {*/
-/*        transform: rotate(360deg);*/
-/*    }*/
-/*}*/
-
-/*@media (prefers-reduced-motion: no-preference) {*/
-/*    a:nth-of-type(2) .logo {*/
-/*        animation: logo-spin infinite 20s linear;*/
-/*    }*/
-/*}*/
-
-/*.card {*/
-/*    padding: 2em;*/
-/*}*/
-
-/*.read-the-docs {*/
-/*    color: #888;*/
-/*}*/
